--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -178,9 +178,10 @@ Miscellaneous
 - |API| Removed all mentions of ``sklearn.externals.joblib``, and deprecated
   joblib methods exposed in ``sklearn.utils``, except for
   :func:`utils.parallel_backend` and :func:`utils.register_parallel_backend`,
-  which impact the behavior of `sklearn`. Other functionalities are part of
-  the `joblib <https://joblib.readthedocs.io/>`_ package and should be used
-  directly, by installing it. The goal of this change is to prepare for
+  which allow users to configure parallel computation in scikit-learn.
+  Other functionalities are part of `joblib <https://joblib.readthedocs.io/>`_.
+  package and should be used directly, by installing it.
+  The goal of this change is to prepare for
   unvendoring joblib in future version of scikit-learn.
   :issue:`12345` by :user:`Thomas Moreau <tomMoral>`
 
