--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -49,7 +49,8 @@ Changelog
   Müller`_.
 
 - |API| :func:`compose.make_column_transformer` now expects
-  `(transformer, columns)` instead of `(columns, transformer)`.
+  ``(transformer, columns)`` instead of ``(columns, transformer)`` to keep
+  consistent with :class:`compose.ColumnTransformer`.
   :issue:`12339` by :user:`Adrin Jalali <adrinjalali>`.
 
 :mod:`sklearn.datasets`
