--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -132,9 +132,9 @@ Support for Python 3.4 and below has been officially dropped.
 :mod:`sklearn.svm`
 ..................
 - |Enhancement| :class:`svm.SVC` and :class:`NuSVC` now accept a `break_ties`
-  parameter. This parameter results in `predict` breaking the ties the same way
-  it is done in `decision_function`, if `decision_function_shape`='ovr', and
-  number of target classes > 2.
+  parameter. This parameter results in `predict` breaking the ties according
+  to the confidence values of `decision_function`, if
+  `decision_function_shape`='ovr', and the number of target classes > 2.
   :pr:`12557` by :user:`Adrin Jalali <adrinjalali>`.
 
 :mod:`sklearn.tree`
