--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -15,7 +15,12 @@ enhancements to features released in 0.20.0.
 Changelog
 ---------
 
+:mod:`sklearn.pipeline`
+.......................
 
+- |Fix| Fixed a regression in :class:`pipeline.Pipeline` where the ``steps``
+  parameter may not have been updated correctly when ``None`` or
+  ``'passthrough'`` is used. :user:`Thomas Fan <thomasjpfan>`.
 
 
 .. _changes_0_20_1:
