--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -151,7 +151,7 @@ Support for Python 3.4 and below has been officially dropped.
 .................................
 - |Feature| Partial dependence plots
   (:func:`partial_dependence.plot_partial_dependence`) are now supported for
-  any regressor or classifier (provided that they have a `predict_proba()`
+  any regressor or classifier (provided that they have a `predict_proba`
   method). :issue:`12599` by :user:`Trevor Stephens<trevorstephens>` and
   :user:`Nicolas Hug<NicolasHug>`.
 
