--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -37,7 +37,7 @@ Changelog
 :mod:`sklearn.neighbors`
 ........................
 
-- |Fix| Fixed :class:`sklearn.neighbors.dist_metrics.JaccardDistance` distance
+- |Fix| Fixed :class:`sklearn.neighbors.DistanceMetric` jaccard distance
   function to return 0 when two all-zero vectors are compared.
   :issue:`12685` by :user:`Thomas Fan <thomasjpfan>`.
 
